feat: adiciona teste unitario e correcoes
